<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World</string>
    <string name="app_name">二工大图书馆</string>
    <string name="toolbar_return">返回</string>
    <string name="toolbar_everydaytip">读者服务</string>
    <string name="zljz">展览讲座</string>
    <string name="tsgxx">上海第二工业大学图书馆信息</string>
    <string name="fgdh">我的图书馆</string>
    <string name="smjs">书目检索</string>
    <string name="search_hint">请输入检索关键词</string>
    <string name="set">设置面板</string>
    <string name="dzzzhgl">读者证账号管理</string>
    <string name="kfsj">开放时间</string>
    <string name="jgjs">结构介绍</string>
    <string name="gkjs">馆况介绍</string>
    <string name="gzzc">馆长致辞</string>
    <string name="gzzd">规章制度</string>
    <string name="bggk">本馆概况</string>
    <string name="fwzn">服务指南</string>
    <string name="pxjz">培训讲座</string>
    <string name="chtx">催还提醒</string>
    <string name="xstj">新书推荐</string>
    <string name="xsjg">新书荐购</string>
    <string name="xstb">新书通报</string>
    <string name="dzly">读者留言</string>
    <string name="cjwt">常见问题</string>
    <string name="xsrgbz">新生入馆帮助</string>
    <string name="sbbx">设备报修</string>
    <string name="clsq">曹路社区</string>
    <string name="ystsg">艺术图书馆</string>
    <string name="style_hint">style为数字</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="zljzscj">展览讲座收藏夹</string>
    <string name="lecturedetail_speaker">作者                         </string>
    <string name="lecturedetail_place">出版社                           </string>
    <string name="lecturedetail_time">出版时间                          </string>
    <string name="lecturedetail_btime">印刷时间                       </string>
    <string name="VersionNames">2.2.1</string>
    <string name="login_cardno">读者卡号</string>
    <string name="login_password">密码/身份证号</string>
    <string name="zhdl">账号登录</string>
    <string name="str_id_start">开始</string>
    <string name="str_id_bus">公交车</string>
    <string name="speak">Speak Now</string>
    <string name="menu_settings">Settings</string>
    <string name="searchLable">searchLable</string>
    <string name="searchHint">please input search key</string>
    <string name="searchResultMain_title">查询结果</string>
    <string name="menu_option">安装插件</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="version_unknown">版本号未知</string>
</resources>